--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ input{
     border: none;
     position: absolute;
     right: 50px;
-    top: 34px;
+    top: 24px;
     width: 45px;
     height: 25px;
     border-radius: 30px;    
@@ -259,21 +259,30 @@ input{
     filter: brightness(100%);
 }
 
+.minianimes h1{
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+}
+
 
 
 @media (max-width: 480px) {
 .logo img{
-    height: 0px;
-    width: 0px;
+  display: none;
+}
+
+.logo{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    position: absolute;
+    left: 35px;
 }
 
 .logo h1{
-    font-size: 50px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: end;
+    font-size: 90px;
 }
-
 .scale{
     width: 100%;
     height: 100%;
@@ -297,6 +306,17 @@ input{
    top: 33px;
 }
 
+.history{
+    position: relative;
+    top: -80px;
+    right: 20px;
+}
+
+.history h1{
+    text-align: center;
+    font-size: 40px;
+}
+
 
 .footer{
     position: absolute;
@@ -306,6 +326,8 @@ input{
 .animes{
     display: flex;
     align-items: center;
+    position: relative;
+    top: -90px;
 }
 
 .card img{
@@ -345,6 +367,8 @@ input[type="search"]{
 }
 .minianimes h1{
     font-size: 25px;
+    position: relative;
+    top: -100px;
 }
 
 #procurar{
@@ -356,11 +380,20 @@ input[type="search"]{
     flex-direction: column;
     width: 150px;
     height: 150px;
+    position: relative;
+    top: -100px;
 }
 
 .footer{
   position: absolute;
-  bottom: -1030px;  
+  bottom: -1000px;  
+  text-align: center;
+  font-size: 15px;
+  right: 15px;
+}
+
+.menu{
+    display: none;
 }
 
 }
